you can now edit the values directly

--- a/src/assets/Config.json
+++ b/src/assets/Config.json
@@ -1,182 +1,35 @@
 [
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
+    {"option": "fps_max", "value": 0, "min": 0, "max": 999, "step": 1},
     {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
+    {"option": "rate", "value": 786432, "min": 62500, "max": 786432, "step": 1},
     {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
     {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
     {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
     {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
     {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
     {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
+    {"option": "cl_righthand", "value": 1, "min": 0, "max": 1, "step": 1},
+    {"option": "cl_autoweaponswitch", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "mat_monitorgamma", "value": 1.6, "min": 1, "max": 2.1, "step": 0.1},
+    {"option": "mat_queue_mode", "value": -1, "min": -1, "max": 2, "step": 1},
+    {"option": "mat_disable_bloom", "value": 1, "min": 0, "max": 1, "step": 1},
+    {"option": "r_drawparticles", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "r_drawdecals", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "r_eyemove", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "r_gloss", "value": 0, "min": 0, "max": 1, "step": 1},
     {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1},
-    {"option": "fps_max", "value": 300, "min": 0, "max": 999, "step": 1},
-    {"option": "sensitivity", "value": 2.5, "min": 0.1, "max": 10, "step": 0.1},
-    {"option": "rate", "value": 128000, "min": 1, "max": 999999, "step": 1},
-    {"option": "cl_updaterate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_cmdrate", "value": 128, "min": 64, "max": 128, "step": 64},
-    {"option": "cl_interp_ratio", "value": 1, "min": 1, "max": 3, "step": 1},
-    {"option": "cl_interp", "value": 0, "min": 0, "max": 2, "step": 1},
-    {"option": "cl_lagcompensation", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "cl_forcepreload", "value": 1, "min": 0, "max": 1, "step": 1},
-    {"option": "r_dynamic", "value": 0, "min": 0, "max": 1, "step": 1}
+    {"option": "r_drawtracers_firstperson", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "func_break_max_pieces", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "voice_scale", "value": 0.3, "min": 0, "max": 1, "step": 0.01},
+    {"option": "snd_mixahead", "value": 0.05, "min": 0, "max": 1, "step": 0.01},
+    {"option": "snd_musicvolume", "value": 0, "min": 0, "max": 1, "step": 0.01},
+    {"option": "snd_menumusic_volume", "value": 0, "min": 0, "max": 1, "step": 0.01},
+    {"option": "snd_mvp_volum", "value": 0.15, "min": 0, "max": 1, "step": 0.01},
+    {"option": "snd_roundend_volume", "value": 0, "min": 0, "max": 1, "step": 0.01},
+    {"option": "snd_roundstart_volume", "value": 0, "min": 0, "max": 1, "step": 0.01},
+    {"option": "snd_tensecondwarning_volume", "value": 0.25, "min": 0, "max": 1, "step": 0.01},
+    {"option": "cl_showloadout", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "cl_disablefreezecam", "value": 1, "min": 0, "max": 1, "step": 1},
+    {"option": "gameinstructor_enable", "value": 0, "min": 0, "max": 1, "step": 1},
+    {"option": "cl_disablehtmlmotd", "value": 1, "min": 0, "max": 1, "step": 1}
 ]
