--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-script2": "^2.1.0",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
